[Swagger] Swagger initialization done

--- a/environments/local.env
+++ b/environments/local.env
@@ -1,2 +1,5 @@
 PORT=3000
 BASE_URL=http://localhost:3000/
+SWAGGER_TITLE = "URL Shortner Microservice"
+SWAGGER_DESCRIPTION = "URL Shortner micro-service developed by Naieem Mahmud Supto" 
+SWAGGER_VERSION = "1.0"
