--- a/environments/production.env
+++ b/environments/production.env
@@ -3,3 +3,8 @@ BASE_URL=http://localhost/
 SWAGGER_TITLE = "URL Shortner Microservice"
 SWAGGER_DESCRIPTION = "URL Shortner micro-service developed by Naieem Mahmud Supto" 
 SWAGGER_VERSION = "1.0"
+// mongodb
+MONGODB_URI = mongodb://localhost:27017/url-shortner
+
+TTL = 60
+LIMIT = 50
