--- a/environments/local.env
+++ b/environments/local.env
@@ -6,5 +6,11 @@ SWAGGER_VERSION = "1.0"
 // mongodb
 MONGODB_URI = mongodb://localhost:27017/url_shortner
 
+//JWT 
+JWT_SECRET = "sr3yNZ7e2d50EJRUCikNHzw0cAu9wVk3o6TuF5sEyuU"
+JWT_SECRET_REFRESH = "fcb62b89-1e25-415f-bfa7-8d704084gt33f"
+JWT_EXPIRES = 900s
+
+// Throttle
 TTL = 60
 LIMIT = 50
