--- a/environments/dev.env
+++ b/environments/dev.env
@@ -2,9 +2,14 @@ PORT=80
 BASE_URL=http://localhost/
 SWAGGER_TITLE = "URL Shortner Microservice"
 SWAGGER_DESCRIPTION = "URL Shortner micro-service developed by Naieem Mahmud Supto" 
-SWAGGER_VERSION = "1.0"
+SWAGGER_VERSION = "1.1"
 // mongodb
-MONGODB_URI = mongodb://localhost:27017/url-shortner
+MONGODB_URI = mongodb://172.17.0.2:27017/url_shortner
 
+//JWT 
+JWT_SECRET = "sr3yNZ7e2d50EJRUCikNHzw0cAu9wVk3o6TuF5sEyuU"
+JWT_EXPIRES = 900s
+TOKEN_ISSUER= "YPB"
+// Throttle
 TTL = 60
 LIMIT = 50
