--- a/package.json
+++ b/package.json
@@ -2,19 +2,16 @@
   "name": "url-shortner",
   "version": "0.0.1",
   "description": "",
-  "author": "",
+  "author": "Naieem Mahmud Supto",
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "nest build",
-    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "start:local": "cross-env NODE_ENV=local nest start --watch",
-    "start:dev": "nest NODE_ENV=dev start --watch",
-    "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "start:dev": "cross-env NODE_ENV=dev node main",
+    "start:prod": "cross-env NODE_ENV=prod node main",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
@@ -34,6 +31,7 @@
     "class-validator": "^0.13.2",
     "cross-env": "^7.0.3",
     "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.7.2",
     "nanoid": "^3.3.4",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
