--- a/environments/local.env
+++ b/environments/local.env
@@ -5,6 +5,7 @@ SWAGGER_DESCRIPTION = "URL Shortner micro-service developed by Naieem Mahmud Sup
 SWAGGER_VERSION = "1.0"
 // mongodb
 MONGODB_URI = mongodb://localhost:27017/url_shortner
+MONGODB_URI_TEST = mongodb://localhost:27017/url_shortner_test
 
 //JWT 
 JWT_SECRET = "sr3yNZ7e2d50EJRUCikNHzw0cAu9wVk3o6TuF5sEyuU"
