[PACKAGE] unwanted scripts deleted

--- a/package.json
+++ b/package.json
@@ -14,9 +14,7 @@
     "start:prod": "cross-env NODE_ENV=prod node main",
     "test": "cross-env NODE_ENV=local jest",
     "test:watch": "jest --watch",
-    "test:cov": "cross-env NODE_ENV=local jest --coverage",
-    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:cov": "cross-env NODE_ENV=local jest --coverage"
   },
   "dependencies": {
     "@nestjs/common": "^9.0.0",
