[PACKAGE] Production run script updated with mistake on the env name

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "start": "nest start",
     "start:local": "cross-env NODE_ENV=local nest start --watch",
     "start:dev": "cross-env NODE_ENV=dev node main",
-    "start:prod": "cross-env NODE_ENV=prod node main",
+    "start:prod": "cross-env NODE_ENV=production node main",
     "test": "cross-env NODE_ENV=local jest",
     "test:watch": "jest --watch",
     "test:cov": "cross-env NODE_ENV=local jest --coverage"
